# Localizer-wrapper

./: CMakeLists.txt  package.xml
cmake/: FindG2O.cmake
config/: loc_corrector_params.yaml  params.yaml
include/localizer_wrapper/: ArtslamLocalizer.hpp
launch/: artslam_localizer.py
src/: ArtslamLocalizer.cpp
