<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">

    <name>localizer_wrapper</name>
    <version>0.0.1</version>
    <description>Wrapper for the LOTS-Localization module</description>
    <maintainer email="leonardo.gargani@mail.polimi.it">Leonardo Gargani</maintainer>
    <license>Apache License 2.0</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>rclcpp</depend>
    <depend>localization_lib</depend>
    <depend>sensor_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>tf2_ros</depend>
    <depend>pcl_ros</depend>
    <depend>pcl_conversions</depend>
    <depend>tf2</depend>
    <depend>geometry_msgs</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>

</package>
